# ytapi2

./: .anvil_editor.yaml  .env.example  Dockerfile  README.md  anvil.yaml  docker-compose.yml  main.py  nginx.conf  oauth_setup.py  pyproject.toml  requirements.txt  setup.sh
server_code/: ServerModule1.py
src/youtube_search/: config.py
src/youtube_search/admin/: auth.py  db.py  env_manager.py  router.py
src/youtube_search/api/v1/: docs.py  download.py  oauth.py  search.py  search_prefetch.py
src/youtube_search/auth/: __init__.py  auth_provider.py  credentials.py  session_manager.py  token.py  token_provider.py
src/youtube_search/models/: download.py
src/youtube_search/services/: __init__.py  audio_downloader.py  cache.py  cache_manager.py  cloudinary_service.py  file_cleanup.py  oauth_client.py  oauth_middleware.py  oauth_registry.py  playlist_scraper.py  scraper.py  search.py  token_store.py
